--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "async": "^1.4.2",
     "body-parser": "^1.13.3",
     "express": "^4.13.3",
-    "mongodb": "^2.0.43"
+    "mongodb": "^2.0.43",
+    "node-uuid": "^1.4.3"
   }
 }
