--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.13.3",
     "mongodb": "^2.0.43",
     "node-uuid": "^1.4.3",
-    "progress": "^1.1.8"
+    "progress": "^1.1.8",
+    "socket.io": "^1.3.7"
   }
 }
