--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.13.3",
     "express": "^4.13.3",
     "mongodb": "^2.0.43",
+    "mysql": "^2.10.2",
     "node-uuid": "^1.4.3",
     "progress": "^1.1.8",
     "socket.io": "^1.3.7"
