--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongodb": "^2.0.43",
     "mysql": "^2.10.2",
     "node-uuid": "^1.4.3",
+    "nodemailer": "^2.0.0",
     "progress": "^1.1.8",
     "socket.io": "^1.3.7"
   }
